Agregamos mas ventanas
Ventanas de vendedor

--- a/Obligatorio2IngSoftware/src/Interfaz/VentanaEditarArticulos.form
+++ b/Obligatorio2IngSoftware/src/Interfaz/VentanaEditarArticulos.form
@@ -49,13 +49,12 @@
                           <Component id="jScrollPane1" min="-2" pref="187" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="28" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jButtonBorarArticulo" max="32767" attributes="0"/>
-                      <Component id="jButtonEditar" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jButtonAgregarArticulo" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jButtonAgregarArticulo" pref="140" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
+                  <EmptySpace pref="57" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -70,8 +69,6 @@
                           <Component id="jButtonBorarArticulo" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="jButtonAgregarArticulo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                          <Component id="jButtonEditar" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jScrollPane1" min="-2" pref="155" max="-2" attributes="0"/>
                   </Group>
@@ -126,14 +123,6 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAgregarArticuloActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="jButtonEditar">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Editar"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEditarActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
