--- a/Obligatorio2IngSoftware/src/Interfaz/VentanaVendedor.form
+++ b/Obligatorio2IngSoftware/src/Interfaz/VentanaVendedor.form
@@ -44,6 +44,7 @@
                       <Component id="jButtonEditarArticulos" max="32767" attributes="0"/>
                       <Component id="jButtonEditarClientes" max="32767" attributes="0"/>
                       <Component id="jButtonEditarLocales" max="32767" attributes="0"/>
+                      <Component id="btnEstadisticas" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="159" max="32767" attributes="0"/>
               </Group>
@@ -52,13 +53,15 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                   <Component id="jButtonEditarArticulos" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jButtonEditarClientes" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="btnEstadisticas" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jButtonEditarLocales" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="65" max="32767" attributes="0"/>
+                  <EmptySpace pref="96" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -84,6 +87,14 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Editar Locales"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnEstadisticas">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Estadisticas"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEstadisticasActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
